methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:6: error: ')' expected but 'else' found.
    } else {
      ^